[package]
name = "fresh"
version = "0.4.2"
edition = "2021"
rust-version = "1.60.0" #req'd by the regex crate
authors = ["Dan (d2718) <d2718@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/d2718/fresh"
description = "A friendlier sed replacement."

[dependencies]
clap = { version = "^4.3", features = ["derive"] }
regex = "^1.9"
regex-chunker = "^0.3"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
